# oida-rag

./: .gitignore  Cargo.toml  README.md  oida.toml.example
crates/corpus-index/: Cargo.toml
crates/corpus-index/src/: apply.rs  artifacts.rs  chat.rs  cli.rs  config.rs  derived.rs  hybrid.rs  index.rs  ingest.rs  lib.rs  mcp.rs  model.rs  progress.rs  provider.rs  raw.rs  row.rs  search.rs  source.rs  sql.rs
crates/corpus-index/src/chat/: agent.rs  ollama.rs  repl.rs
crates/mcp-chat/: Cargo.toml
crates/mcp-chat/src/: agent.rs  config.rs  lib.rs  mcp_client.rs  openai.rs
crates/oida/: Cargo.toml
crates/oida-cli/: Cargo.toml
crates/oida-cli/src/: agent.rs  main.rs  mcp_client.rs  repl.rs
crates/oida-core/: Cargo.toml
crates/oida-core/examples/: smoke.rs
crates/oida-core/src/: artifacts.rs  config.rs  derived.rs  embed.rs  graph.rs  hybrid.rs  index.rs  ingest.rs  lib.rs  model.rs  progress.rs  raw.rs  schema.rs  search.rs  solr.rs  solr_map.rs  source.rs  sql.rs  update.rs
crates/oida-mcp-server/: Cargo.toml
crates/oida-mcp-server/src/: main.rs  tools.rs
crates/oida/examples/: find-related.rs  smoke.rs
crates/oida/src/: config.rs  lib.rs  model.rs  queries.rs  solr_map.rs  solr_provider.rs  update.rs
docs/: hybrid-search.md
