[workspace]
resolver = "3"
members = [
    "crates/oida-core",
    "crates/oida-mcp-server",
    "crates/oida-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
oida-core = { path = "crates/oida-core" }

anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

lancedb = "0.30"
lance = { version = "=7.0.0", default-features = false }
datafusion = { version = "=53.1.0", default-features = false, features = [
    "parquet",
    "nested_expressions",
    "sql",
] }
arrow = "58"
lance-index = "=7.0.0"
object_store = { version = "0.13", features = ["aws"] }
futures = "0.3"
rmcp = "1"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive", "env"] }
rustyline = "17"
toml = "0.9"
schemars = "1"
