[package]
name = "corpus-index"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Optional MCP *server* tool layer: the generic, corpus-agnostic tool builders
# (over the `CorpusBackend` trait). Off by default so the engine stays
# transport-agnostic for consumers that don't serve MCP.
mcp = ["dep:rmcp", "rmcp/server", "rmcp/schemars"]
# Optional MCP *client* chat agent: an Ollama-driven, MCP-tools REPL. Engine-
# independent (talks to any MCP server subprocess); gated so its client deps
# don't burden non-chat consumers.
chat = ["dep:rmcp", "rmcp/client", "rmcp/transport-child-process", "dep:rustyline"]
# Optional CLI operation helpers (embedder, derived builds, stats) over the
# engine — no extra deps, just an opt-in module for corpus command lines.
cli = []

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
schemars.workspace = true
rmcp = { workspace = true, optional = true }
rustyline = { workspace = true, optional = true }
lancedb.workspace = true
lance.workspace = true
datafusion.workspace = true
arrow.workspace = true
lance-index.workspace = true
object_store.workspace = true
futures.workspace = true
indicatif.workspace = true
reqwest.workspace = true
tokio.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
