[package]
name = "oida-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "oida-cli"
path = "src/main.rs"

[dependencies]
oida-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rmcp = { workspace = true, features = ["client", "transport-child-process"] }
reqwest.workspace = true
clap.workspace = true
rustyline.workspace = true
