[package]
name = "oida-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
duckdb.workspace = true
toml.workspace = true
schemars.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
