[package]
name = "oida-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
toml.workspace = true
schemars.workspace = true
lancedb.workspace = true
lance.workspace = true
datafusion.workspace = true
arrow.workspace = true
lance-index.workspace = true
futures.workspace = true
reqwest.workspace = true
tokio.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
