[package]
name = "oida-mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "oida-mcp-server"
path = "src/main.rs"

[dependencies]
oida-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rmcp = { workspace = true, features = ["server", "macros", "transport-io", "schemars"] }
schemars.workspace = true
