[package]
name = "oida"
version.workspace = true
edition.workspace = true
license.workspace = true

# The OIDA domain crate: the library (Solr provider, document schema, graph
# queries) plus the two OIDA binaries. A provider is thus one small crate against
# the `corpus-index` framework; the features it enables are the ones its binaries
# need (MCP server tools and the CLI helpers). The chat agent lives in the generic
# `mcp-chat` crate.
[dependencies]
corpus-index = { workspace = true, features = ["mcp", "cli"] }
mcp-chat = { workspace = true }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
schemars.workspace = true
arrow.workspace = true
futures.workspace = true
reqwest.workspace = true
tokio.workspace = true
clap.workspace = true
rmcp = { workspace = true, features = ["server", "macros", "transport-io", "schemars"] }
